--- a/css/servivios.css
+++ b/css/servivios.css
@@ -36,6 +36,308 @@ body.dark {
     transition: .5s ease;
 }
 
+/*MENU*/
+.nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 60px;
+    width: 100%;
+    background-color: var(--color-black);
+    z-index: 100;
+    transition: .5s ease;
+}
+.nav.activeMenu {
+    background-color: var(--color-black);
+    padding: 1px;
+    z-index: 100;
+    transition: .5s ease;
+}
+.nav.activeMenu .logo,
+.nav.activeMenu a {
+    color: var(--color-white);
+    transition: .5s ease;
+}
+.nav.activeMenu a:hover {
+    color: var(--color-purple);
+    transition: .5s ease;
+}
+.scrol {
+    height: auto;
+}
+.nav .nav-bar {
+    position: relative;
+    height: 100%;
+    max-width: 1000px;
+    width: 100%;
+    background-color: var(--color-black);
+    backdrop-filter: blur(20px);
+    margin: 0 auto;
+    padding: 0 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: .5s ease;
+}
+.nav .nav-bar .slideropen {
+    color: var(--color-white);
+    font-size: 25px;
+    padding: 5px;
+    cursor: pointer;
+    display: none;
+    transition: .5s ease;
+}
+.nav .nav-bar .logo a {
+    font-size: 22px;
+    font-weight: 500;
+    color: var(--color-white);
+    text-decoration: none;
+    transition: .5s ease;
+}
+.menu .logo-toggle {
+    display: none;
+}
+.nav-bar .nav-links{
+    display: flex;
+    align-items: center;
+}
+.nav-bar .nav-links li {
+    margin: 0 5px;
+    list-style: none;
+}
+.nav-links li a {
+    position: relative;
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--color-white);
+    text-decoration: none;
+    padding: 10px;
+    transition: .5s ease;
+}
+.nav-links li a:hover {
+    color: var(--color-purple);
+    transition: .5s ease;
+}
+.nav-links li a::before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    height: 7px;
+    width: 7px;
+    border-radius: 50%;
+    background-color: var(--color-purple);
+    opacity: 0;
+    transition: .5s ease;
+}
+.nav-links li:hover a::before {
+    opacity: 1;
+}
+.nav-bar .darklight-searchBox {
+    display: flex;
+    align-items: center;
+}
+.darklight-searchBox .darlight,
+.darklight-searchBox .searchToggle {
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 5px;
+}
+.darlight i,
+.searchToggle i {
+    position: absolute;
+    color: var(--color-white);
+    font-size: 22px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    transition: .5s ease;
+}
+.darlight i.sun {
+    opacity: 0;
+    pointer-events: none;
+}
+.darlight.activeLight i.sun {
+    opacity: 1;
+    pointer-events: auto;
+}
+.darlight.activeLight i.moon {
+    opacity: 0;
+    pointer-events: none;
+}
+.searchToggle i.cancel {
+    opacity: 0;
+    pointer-events: none;
+}
+.searchToggle.activeBar i.cancel {
+    opacity: 1;
+    pointer-events: auto;
+}
+.searchToggle.activeBar i.search {
+    opacity: 0;
+    pointer-events: none;
+}
+body.dark .bar-menu input {
+    color: var(--color-text);
+}
+.bar-menu i {
+    position: absolute;
+    color: var(--color-white);
+    right: 15px;
+    font-size: 22px;
+    cursor: pointer;
+}
+body.dark .bar-menu i {
+    color: var(--color-text);
+}
+/*BOTONES DE INICIO*/
+.btn-users a .btn-registrar,
+.btn-users a .btn-iniciarS {
+    color: var(--color-white);
+    cursor: pointer;
+    text-decoration: none;
+    transition: .5 ease;
+}
+.btn-users a .btn-registrar:hover,
+.btn-users a .btn-iniciarS:hover {
+    scale: 1.1;
+}
+.btn-users .btn-registrar,
+.btn-users .btn-iniciarS {
+    padding: 10px 15px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 12px;
+    margin: 0 10px 0;
+    transition: .5s ease;
+}
+.btn-users .btn-registrar:after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-black);
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+    transition: .5s ease;
+}
+.btn-users .btn-iniciarS:after {
+    z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-black);
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+    transition: .5s ease;
+}
+/*color*/
+.btn-users .btn-registrar::before,
+.btn-users .btn-iniciarS::before {
+    content: "";
+    background: linear-gradient(
+        45deg,
+        #410070, 
+        #540091, 
+        #9810FF,
+        #C779FF,
+        #DBA9FF,
+        #C779FF,
+        #9810FF,
+        #540091, 
+        #410070
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 600%;
+    z-index: -1;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    filter: blur(8px);
+    animation: glowing 20s linear infinite;
+    transition: opacity .5s ease;
+    border-radius: 10px;
+    opacity: 1;
+}
+@keyframes glowing {
+    0% {background-position: 0 0;}
+    50% {background-position: 400% 0;}
+    100% {background-position: 0 0;}
+}
+/*MENU AJUSTABLE*/
+@media (max-width: 768px) {
+    .nav .nav-bar .slideropen {
+        display: block;
+        z-index: 100;
+    }
+    .menu {
+        position: fixed;
+        height: 100%;
+        width: 250px;
+        left: -100%;
+        top: 0;
+        padding: 20px;
+        background-color: var(--color-black);
+        z-index: 100;
+        transition: all 0.5s ease;
+    }
+    .nav.active .menu {
+        left: -0%;
+    }
+    .nav.active .nav-bar .navLogo a {
+        opacity: 1;
+        transition: all 0.3s ease;
+    }
+    .menu .logo-toggle {
+        display: block;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .logo-toggle .sliderclose {
+        color: var(--color-white);
+        font-size: 24px;
+        cursor: pointer;
+    }
+    .nav-bar .nav-links {
+        flex-direction: column;
+        padding-top: 30px;
+        opacity: 0;
+    }
+    .nav-links li a {
+        display: block;
+        margin-top: 20px;
+    }
+    /*BOTONES DE INICIO*/
+    .btn-users .btn-registrar,
+    .btn-users .btn-iniciarS {
+    width: 80px;
+    height: 25px;
+    font-size: 8px;
+    padding: 5px 5px;
+    border: none;
+    outline: none;
+    color: var(--color-white);
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 12px;
+    margin: 0 10px 0;
+    transition: .5s ease;
+}
+}
+
 /*
 SERVICIOS
 */
@@ -157,7 +459,7 @@ PIE DE PAGINA
     max-width: 1200px;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 50px;
     padding: 45px 0;
 }
@@ -170,6 +472,7 @@ PIE DE PAGINA
 }
 .pie-pagina .grupo1 .box figure img {
     width: 100px;
+    height: 100px;
     border: 3px solid var(--color-white);
     border-radius: 50%;
     transition: .5s ease;
